# CANSAT_2024_MCU

./: .gitmodules  CMakeLists.txt
components/libnmea/: CMakeLists.txt  idf_component.yaml
components/libnmea/example/main/: CMakeLists.txt
main/: CMakeLists.txt  main.c  main.cpp  main.h  nmea_uart.c  nmea_uart.h
